--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,14 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
-    <dependency>
+   <!-- <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>RELEASE</version>
       <scope>test</scope>
-    </dependency>
+    </dependency>-->
 
 
 
